# InfiniCCL

./: CMakeLists.txt  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflow/: clang-format.yml
.github/workflows/: ruff.yml
cmake/: InfiniCCLConfig.cmake.in
examples/: CMakeLists.txt  all_gather.cc  all_reduce.cc  all_to_all.cc  broadcast.cc  cluster.yaml  gather.cc  reduce.cc  reduce_scatter.cc  scatter.cc  send_recv.cc  utils.h
examples/ccl/: all_reduce.cc
examples/ccl_mpi_hybrid/: all_reduce.cc
examples/mpi/: all_gather.cc  all_reduce.cc  all_to_all.cc  broadcast.cc  gather.cc  reduce.cc  reduce_scatter.cc  scatter.cc  send_recv.cc
include/: comm.h  comm_ops.h  data_type.h  return_status.h
scripts/: build.sh  gen_bridge.py  icclrun.py  icclrun_logic.py  run_examples.py  run_wrapper.sh
scripts/backends/: mpi_base.py  mpich.py  ompi.py
src/: CMakeLists.txt  backend.h  backend_device_map.h  caster.h  comm.cc  comm_impl.h  comm_ops_impl.h  communicator.h  constexpr_map.h  data_type_impl.h  device.h  dispatcher.h  logging.h  operation.h  return_status_impl.h  runtime.h  traits.h
src/backends/ccl/common/: api.h  comm_instance.h
src/backends/ccl/common/impl/: all_reduce.h  comm_destroy.h  comm_init_rank.h  get_unique_id.h
src/backends/ccl/mccl/: api.h  checks.h  type_map.h
src/backends/ccl/mccl/impl/: all_reduce.h  comm_destroy.h  comm_init_rank.h  get_unique_id.h
src/backends/ccl/mccl/metax/: api.h
src/backends/ccl/mccl/moore/: api.h
src/backends/ccl/nccl/: api.h  checks.h  type_map.h
src/backends/ccl/nccl/iluvatar/: api.h
src/backends/ccl/nccl/impl/: all_reduce.h  comm_destroy.h  comm_init_rank.h  get_unique_id.h
src/backends/ccl/nccl/nvidia/: api.h
src/backends/mpi/ompi/: checks.h  comm_instance.h  type_map.h
src/backends/mpi/ompi/impl/: all_gather.h  all_reduce.h  all_to_all.h  bcast.h  broadcast.h  comm_destroy.h  comm_init_all.h  finalize.h  gather.h  get_rank.h  get_size.h  init.h  recv.h  reduce.h  reduce_scatter.h  scatter.h  send.h
src/base/: all_reduce.h  all_to_all.h  bcast.h  broadcast.h  comm_destroy.h  comm_init_all.h  comm_init_rank.h  finalize.h  gather.h  get_rank.h  get_size.h  get_unique_id.h  init.h  recv.h  reduce.h  reduce_scatter.h  scatter.h  send.h
src/cambricon/: caster.mlu  caster_.h  checks.h  data_type_.h  device_.h  runtime_.h
src/cpu/: caster_.h  data_type_.h  device_.h  runtime_.h
src/cuda/: checks.h  runtime_.h
src/devices/cambricon/: caster_.h  checks.h  data_type_.h  device_.h  runtime_.h
src/devices/cpu/: caster_.h  data_type_.h  device_.h  runtime_.h
src/devices/cuda/: checks.h  runtime_.h
src/devices/iluvatar/: caster_.cuh  data_type_.h  device_.h  runtime_.h
src/devices/metax/: caster_.cuh  checks.h  data_type_.h  device_.h  runtime_.h
src/devices/moore/: caster_.cuh  checks.h  data_type_.h  device_.h  runtime_.h
src/devices/nvidia/: caster_.cuh  data_type_.h  device_.h  runtime_.h
src/iluvatar/: caster_.cuh  data_type_.h  device_.h  runtime_.h
src/metax/: caster_.cuh  checks.h  data_type_.h  device_.h  runtime_.h
src/moore/: caster_.cuh  checks.h  data_type_.h  device_.h  runtime_.h
src/nvidia/: caster_.cuh  checks.h  data_type_.h  device_.h  runtime_.h
src/nvidia/nccl/: checks.h  comm_instance.h  type_map.h
src/nvidia/nccl/impl/: all_reduce.h  comm_destroy.h  comm_init_rank.h  get_unique_id.h
src/ompi/: checks.h  comm_instance.h  type_map.h
src/ompi/impl/: all_reduce.h  all_to_all.h  bcast.h  broadcast.h  comm_destroy.h  comm_init_all.h  finalize.h  gather.h  get_rank.h  get_size.h  init.h  recv.h  reduce.h  reduce_scatter.h  scatter.h  send.h
